# cmake-utils

./: .gersemirc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  cmake-utils.cmake  config.cmake.in  config.hpp.in  dependencies.cmake.in  deprecated.hpp.in  docs.md  generate-dependencies.cmake.in  genmd.py  pixi.toml  pyproject.toml  warning.hpp.in
.devcontainer/: Dockerfile
.devcontainer/ubuntu-22.04-arm64/: devcontainer.json
.devcontainer/ubuntu-22.04-x86_64/: devcontainer.json
.devcontainer/ubuntu-24.04-arm64/: devcontainer.json
.devcontainer/ubuntu-24.04-x86_64/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-pixi.yml  ci-prek.yml  ci-windows.yml  ci.yml  pixi-ci.yml  pre-commit.yml
external-modules/pytest-cmake/: PytestDiscoverTests.cmake
find-modules/: FindAccelerate.cmake  FindPytest.cmake  FindScipy.cmake  Findsimde.cmake
modules/: BoostPython.cmake  CheckPythonModuleName.cmake  PrintSystemInfo.cmake  check_python_module_name.py  cmake-utils.cmake  jrl.cmake
modules/matio/: Findmatio.cmake
modules/simde/: Findsimde.cmake
staging-modules/: CheckPythonModuleName.cmake  PrintSystemInfo.cmake
templates/: __init__.py.in  config-components.cmake.in  config.cmake.in  deprecated.hpp.in  generate-dependencies.cmake.in
test_project/: CMakeLists.txt  README.md  pixi.toml
test_project/include/test_project/: Math.hpp  StringUtils.hpp
test_project/python_bindings/: CMakeLists.txt  bindings.cpp
test_project/src/: StringUtils.cpp
test_project/tests/: CMakeLists.txt  test_StringUtils.cpp  test_bindings.py
tests/: CMakeLists.txt
tests/packaging/fetchcontent/: CMakeLists.txt
tests/packaging/pixi_build/: CMakeLists.txt
tests/test_project/: CMakeLists.txt  README.md  pixi.toml
tests/test_project/bindings/boostpy-bindings/: CMakeLists.txt  __init__.py.in  bindings.cpp
tests/test_project/bindings/nanobind-bindings/: CMakeLists.txt  bindings.cpp
tests/test_project/include/test_project/: Math.hpp  StringUtils.hpp
tests/test_project/python_bindings/: CMakeLists.txt  __init__.py.in
tests/test_project/src/: Math.cpp  StringUtils.cpp
tests/test_project/tests/: CMakeLists.txt  test_StringUtils.cpp  test_boostpy_bindings.py  test_nanobind_bindings.py
tests/test_project_without_deps/: CMakeLists.txt
tests/test_project_without_deps/include/myproj/: mylib.hpp
tests/test_project_without_deps/src/: mylib.cpp
